# thesis

./: Cargo.toml  process.txt  todo.txt
results/: result.txt
src/: behavior.rs  camera.rs  components.rs  debug.rs  errors.rs  main.rs  mcst.rs  movement.rs  npc.rs  simulate.rs  simulation.rs  systems.rs  tile.rs  world.rs
src/entities/: agent.rs  camera.rs  entity.rs  monster.rs  treasure.rs
src/gameworld/: highlight.rs  mod.rs  position.rs  tile.rs  tile_types.rs  world.rs
src/mcst_system/: backpropogate.rs  mcst.rs  selection_expansion.rs  setup.rs  simulation.rs  systems.rs
src/mcst_system/mcst_tree/: mcst_node.rs  mcst_tree.rs
src/npcs/: agent.rs  monster.rs  player.rs  treasure.rs
src/npcs/npc_components/: action_rating.rs  gene_type.rs  genes.rs  hitbox.rs  npc_action.rs  npc_base.rs  npc_status.rs  npc_type.rs  opinions.rs  target.rs
src/system/: setup.rs  simulation.rs  systems.rs
src/system/mcst_system/: backpropegation.rs  expansion.rs  selection.rs
src/system/mcst_tree/: mcst_node.rs  mcst_tree.rs  simulation_tree.rs
src/system/pathfinding/: pathfinding_calculation.rs
src/system/player_system/: handle_player_movement.rs  highlight_squares.rs
src/system/simulation/: handle_npc_movement.rs  handle_selected_action.rs
src/tests/: check_mcst_trees_system.rs  mcst_tests.rs  simple_agent.rs
src/ui/: camera.rs  npc_click.rs  setup_ui.rs
src/ui/mcst_tree_display/: mcst_tree_display.rs  tree_app.rs
src/ui/player_ui/: player_health_bar.rs
worlds/: test.txt
